--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </main>
 
     <div id="footer">
-    <h3 >Make your move</h3>
+    <h3 >Make your move, hola</h3>
     </div>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
